--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,11 @@
     width: 200px;
 }
 
+#showTimer {
+    position: absolute;
+    top: 0;
+    right: 40px;
+    width: 100px;
+    text-align: right;
+}
+
