--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,13 +15,21 @@
     position: absolute;
     top: 0;
     right: 40px;
-    width: 100px;
+    width: 70px;
     text-align: right;
 }
 
 .viewHighScores {
     position: absolute;
     top: 20px;
+    left: 40px;
+    width: 200px;
+    text-align: left;
+}
+
+.back-button { 
+    position: absolute;
+    top: 40px;
     left: 40px;
     width: 200px;
     text-align: left;
@@ -49,6 +57,19 @@
 
 .btn:hover {
     background-color: coral;
+}
+
+.scores-view {
+    text-align: center;
+}
+
+/* .initials {
+    display: flex;
+    text-align: center;
+} */
+
+.input-box{
+    text-align: center;
 }
 
 
